# cmake_test

./: Base.cpp  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/base/: CMakeLists.txt  test1.cpp
include/: CMakeLists.txt
include/cmake_test2/: Base
misc/pkgconfig/: CMakeLists.txt  cmake_test.pc.in
src/base/: Base.cpp  Base.h  CMakeLists.txt
