
cmake_minimum_required(VERSION 3.1)
project(cmake_test2)

set(TEST_MAJOR_VERSION 0)
set(TEST_MINOR_VERSION 1)
set(TEST_PATCH_VERSION 0)
set(TEST_VERSION ${TEST_MAJOR_VERSION}.${TEST_MINOR_VERSION})
set(TEST_FULL_VERSION ${TEST_MAJOR_VERSION}.${TEST_MINOR_VERSION}.${TEST_PATCH_VERSION})

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
endif()
set(INSTALL_HEADER_DIR "include/cmake_test2")


add_subdirectory(src)
add_subdirectory(include)
